--- a/restaurant.html
+++ b/restaurant.html
@@ -20,9 +20,11 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
-    </ul>
+    <nav aria-label="Breadcrumb">
+        <ul id="breadcrumb" >
+          <li><a aria-current="page" href="/">Home</a></li>
+        </ul>
+    </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -37,7 +39,7 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container" tabindex="-1">
-      <h1 id="restaurant-name"></h1>
+      <h3 id="restaurant-name"></h3>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
