Add a minor reviews on accessibility

--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
     </nav>
     <!-- Beginning breadcrumb -->
     <nav aria-label="Breadcrumb">
-        <ul id="breadcrumb" >
+        <ul id="breadcrumb" role="navigation">
           <li><a aria-current="page" href="/">Home</a></li>
         </ul>
     </nav>
@@ -34,7 +34,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map" role="application"></div>
+      <div id="map" role="application" aria-label="location"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
